@@ -7,7 +7,6 @@ import com.matsinger.barofishserver.jwt.TokenInfo;
 import com.matsinger.barofishserver.product.object.Product;
 import com.matsinger.barofishserver.product.ProductService;
 import com.matsinger.barofishserver.product.object.ProductListDto;
-import com.matsinger.barofishserver.store.object.StoreOrderByAdmin;
 import com.matsinger.barofishserver.utils.Common;
 import com.matsinger.barofishserver.utils.CustomResponse;
 import com.matsinger.barofishserver.utils.S3.S3Uploader;
@@ -44,16 +43,14 @@ public class CurationController {
     @Description("큐레이션 목록")
     @GetMapping("/")
     public ResponseEntity<CustomResponse<List<CurationDto>>> selectCurationList() {
-        CustomResponse<List<CurationDto>> res = new CustomResponse();
+        CustomResponse<List<CurationDto>> res = new CustomResponse<>();
         try {
             List<Curation> curations = curationService.selectCurations();
             List<CurationDto> curationDtos = new ArrayList<>();
             for (Curation curation : curations) {
                 List<Product> products = curationService.selectCurationProducts(curation.getId());
                 CurationDto curationDto = curation.convert2Dto();
-                curationDto.setProducts(products.stream().map(product -> {
-                    return product.convert2ListDto();
-                }).toList());
+                curationDto.setProducts(products.stream().map(Product::convert2ListDto).toList());
                 curationDtos.add(curationDto);
             }
             res.setData(Optional.of(curationDtos));
@@ -69,7 +66,7 @@ public class CurationController {
                                                                                        @RequestParam(value = "take", required = false, defaultValue = "10") Integer take,
                                                                                        @RequestParam(value = "orderby", defaultValue = "id") CurationOrderBy orderBy,
                                                                                        @RequestParam(value = "orderType", defaultValue = "DESC") Sort.Direction sort) {
-        CustomResponse<Page<CurationDto>> res = new CustomResponse();
+        CustomResponse<Page<CurationDto>> res = new CustomResponse<>();
         Optional<TokenInfo> tokenInfo = jwt.validateAndGetTokenInfo(Set.of(TokenAuthType.ADMIN), auth);
         if (tokenInfo == null) return res.throwError("인증이 필요합니다.", "FORBIDDEN");
         try {
@@ -78,9 +75,7 @@ public class CurationController {
             Page<CurationDto> curationDtos = curations.map(curation -> {
                 List<Product> products = curationService.selectCurationProducts(curation.getId());
                 CurationDto curationDto = curation.convert2Dto();
-                curationDto.setProducts(products.stream().map(product -> {
-                    return product.convert2ListDto();
-                }).toList());
+                curationDto.setProducts(products.stream().map(Product::convert2ListDto).toList());
                 return curationDto;
             });
 
@@ -99,10 +94,8 @@ public class CurationController {
             Curation curation = curationService.selectCuration(id);
             List<Product> products = curationService.selectCurationProducts(curation.getId());
             CurationDto curationDto = curation.convert2Dto();
-            curationDto.setProducts(products.stream().map(product -> {
-                return product.convert2ListDto();
-            }).toList());
-            res.setData(Optional.ofNullable(curationDto));
+            curationDto.setProducts(products.stream().map(Product::convert2ListDto).toList());
+            res.setData(Optional.of(curationDto));
             return ResponseEntity.ok(res);
         } catch (Exception e) {
             return res.defaultError(e);
@@ -112,12 +105,12 @@ public class CurationController {
     @Description("큐레이션 상품 목록")
     @GetMapping("/{id}/products")
     public ResponseEntity<CustomResponse<List<ProductListDto>>> selectCurationProducts(@PathVariable("id") Integer id) {
-        CustomResponse<List<ProductListDto>> res = new CustomResponse();
+        CustomResponse<List<ProductListDto>> res = new CustomResponse<>();
         try {
             List<ProductListDto>
                     products =
-                    curationService.selectCurationProducts(id).stream().map(v -> productService.convert2ListDto(v)).toList();
-            res.setData(Optional.ofNullable(products));
+                    curationService.selectCurationProducts(id).stream().map(productService::convert2ListDto).toList();
+            res.setData(Optional.of(products));
             return ResponseEntity.ok(res);
         } catch (Exception e) {
             return res.defaultError(e);
@@ -128,25 +121,34 @@ public class CurationController {
     @Description("큐레이션 추가")
     @PostMapping(value = "/add", consumes = {MediaType.APPLICATION_JSON_VALUE, MediaType.MULTIPART_FORM_DATA_VALUE})
     public ResponseEntity<CustomResponse<Curation>> createCuration(@RequestHeader(value = "Authorization") Optional<String> auth,
-                                                                   @RequestPart(value = "image") MultipartFile file,
-                                                                   @RequestPart(value = "shortName") String shortName,
-                                                                   @RequestPart(value = "title") String title,
-                                                                   @RequestPart(value = "description") String description,
-                                                                   @RequestPart(value = "type") CurationType type) {
-        CustomResponse<Curation> res = new CustomResponse();
+                                                                   @RequestPart(value = "image", required = false) MultipartFile file,
+                                                                   @RequestPart(value = "shortName", required = false) String shortName,
+                                                                   @RequestPart(value = "title", required = false) String title,
+                                                                   @RequestPart(value = "description", required = false) String description,
+                                                                   @RequestPart(value = "type", required = false) CurationType type) {
+        CustomResponse<Curation> res = new CustomResponse<>();
         Optional<TokenInfo> tokenInfo = jwt.validateAndGetTokenInfo(Set.of(TokenAuthType.ADMIN), auth);
         if (tokenInfo == null) return res.throwError("인증이 필요합니다.", "FORBIDDEN");
         try {
             Curation curation = new Curation();
-            shortName = util.validateString(shortName, 20L, "약어");
-            curation.setShortName(shortName);
-            title = util.validateString(title, 100L, "제목");
-            curation.setTitle(title);
-            description = util.validateString(description, 200L, "설명");
-            curation.setDescription(description);
-            String image = s3.upload(file, new ArrayList<>(Arrays.asList("curation")));
-            curation.setImage(image);
-            curation.setType(type);
+            if (shortName == null && title == null)
+                return res.throwError("큐레이션 명과 타이틀 둘 중 하나는 필수입니다.", "INPUT_CHECK_REQUIRED");
+            if (shortName != null) {
+                if (file == null) return res.throwError("이미지를 입력해주세요.", "INPUT_CHECK_REQUIRED");
+                shortName = util.validateString(shortName, 20L, "약어");
+                curation.setShortName(shortName);
+                String image = s3.upload(file, new ArrayList<>(List.of("curation")));
+                curation.setImage(image);
+            }
+            if (title != null) {
+                if (type == null) return res.throwError("타입을 입력해주세요.", "INPUT_CHECK_REQUIRED");
+                if (description == null) return res.throwError("설명을 입력해주세요.", "INPUT_CHECK_REQUIRED");
+                title = util.validateString(title, 100L, "제목");
+                curation.setTitle(title);
+                description = util.validateString(description, 200L, "설명");
+                curation.setDescription(description);
+                curation.setType(type);
+            }
             curation.setSortNo(curationService.selectMaxSortNo());
             Curation data = curationService.add(curation);
             res.setData(Optional.ofNullable(data));
@@ -169,7 +171,7 @@ public class CurationController {
             Curation curation = curationService.selectCuration(id);
             if (file != null) {
                 if (!s3.validateImageType(file)) return res.throwError("허용되지 않는 확장자입니다.", "INPUT_CHECK_REQUIRED");
-                String imageUrl = s3.upload(file, new ArrayList<>(Arrays.asList("curation")));
+                String imageUrl = s3.upload(file, new ArrayList<>(List.of("curation")));
                 curation.setImage(imageUrl);
             }
             if (shortName != null) {
@@ -199,7 +201,7 @@ public class CurationController {
     public ResponseEntity<CustomResponse<Boolean>> addProductToCuration(@RequestHeader(value = "Authorization") Optional<String> auth,
                                                                         @PathVariable("id") Integer id,
                                                                         @RequestPart(value = "data") List<Integer> productIds) {
-        CustomResponse<Boolean> res = new CustomResponse();
+        CustomResponse<Boolean> res = new CustomResponse<>();
         Optional<TokenInfo> tokenInfo = jwt.validateAndGetTokenInfo(Set.of(TokenAuthType.ADMIN), auth);
         if (tokenInfo == null) return res.throwError("인증이 필요합니다.", "FORBIDDEN");
         try {
@@ -221,7 +223,7 @@ public class CurationController {
     @DeleteMapping("/delete/{id}")
     public ResponseEntity<CustomResponse<Curation>> deleteCuration(@RequestHeader(value = "Authorization") Optional<String> auth,
                                                                    @PathVariable("id") Integer id) {
-        CustomResponse<Curation> res = new CustomResponse();
+        CustomResponse<Curation> res = new CustomResponse<>();
         Optional<TokenInfo> tokenInfo = jwt.validateAndGetTokenInfo(Set.of(TokenAuthType.ADMIN), auth);
         if (tokenInfo == null) return res.throwError("인증이 필요합니다.", "FORBIDDEN");
         try {
@@ -229,6 +231,11 @@ public class CurationController {
             Curation curation = curationService.selectCuration(id);
             if (curation == null) throw new Error("큐레이션 데이터를 찾을 수 없습니다.");
             curationService.delete(id);
+            List<Curation> curations = curationService.selectCurations();
+            for (int i = 0; i < curations.size(); i++) {
+                curations.get(i).setSortNo(i + 1);
+            }
+            curationService.updateAllCuration(curations);
             return ResponseEntity.ok(res);
         } catch (Exception e) {
             return res.defaultError(e);
@@ -245,7 +252,7 @@ public class CurationController {
     @DeleteMapping("/delete-product")
     public ResponseEntity<CustomResponse<Boolean>> deleteProductList(@RequestHeader(value = "Authorization") Optional<String> auth,
                                                                      @RequestPart(value = "data") CurationDeleteProductReq data) {
-        CustomResponse<Boolean> res = new CustomResponse();
+        CustomResponse<Boolean> res = new CustomResponse<>();
         Optional<TokenInfo> tokenInfo = jwt.validateAndGetTokenInfo(Set.of(TokenAuthType.ADMIN), auth);
         if (tokenInfo == null) return res.throwError("인증이 필요합니다.", "FORBIDDEN");
         try {
@@ -268,7 +275,7 @@ public class CurationController {
     @PostMapping("/sort-curation")
     public ResponseEntity<CustomResponse<List<CurationDto>>> sortCuration(@RequestHeader(value = "Authorization") Optional<String> auth,
                                                                           @RequestPart(value = "data") SortCurationReq data) {
-        CustomResponse<List<CurationDto>> res = new CustomResponse();
+        CustomResponse<List<CurationDto>> res = new CustomResponse<>();
         Optional<TokenInfo> tokenInfo = jwt.validateAndGetTokenInfo(Set.of(TokenAuthType.ADMIN), auth);
         if (tokenInfo == null) return res.throwError("인증이 필요합니다.", "FORBIDDEN");
         try {
