@@ -1,12 +1,8 @@
 package com.matsinger.barofishserver.data.tip;
 
-import com.matsinger.barofishserver.banner.Banner;
-import com.matsinger.barofishserver.inquiry.Inquiry;
-import com.matsinger.barofishserver.inquiry.InquiryType;
 import com.matsinger.barofishserver.jwt.JwtService;
 import com.matsinger.barofishserver.jwt.TokenAuthType;
 import com.matsinger.barofishserver.jwt.TokenInfo;
-import com.matsinger.barofishserver.store.object.StoreOrderByAdmin;
 import com.matsinger.barofishserver.utils.Common;
 import com.matsinger.barofishserver.utils.CustomResponse;
 import com.matsinger.barofishserver.utils.S3.S3Uploader;
@@ -39,7 +35,7 @@ public class TipController {
 
     @GetMapping("")
     public ResponseEntity<CustomResponse<List<Tip>>> selectTipList(@RequestParam(value = "type", required = false) TipType type) {
-        CustomResponse<List<Tip>> res = new CustomResponse();
+        CustomResponse<List<Tip>> res = new CustomResponse<>();
         try {
             List<Tip> tips = tipService.selectTipList(type);
             res.setData(Optional.ofNullable(tips));
@@ -60,7 +56,7 @@ public class TipController {
                                                                    @RequestParam(value = "type", required = false) String type,
                                                                    @RequestParam(value = "createdAtS", required = false) Timestamp createdAtS,
                                                                    @RequestParam(value = "createdAtE", required = false) Timestamp createdAtE) {
-        CustomResponse<Page<Tip>> res = new CustomResponse();
+        CustomResponse<Page<Tip>> res = new CustomResponse<>();
         Optional<TokenInfo> tokenInfo = jwt.validateAndGetTokenInfo(Set.of(TokenAuthType.ADMIN), auth);
         if (tokenInfo == null) return res.throwError("인증이 필요합니다.", "FORBIDDEN");
         try {
@@ -85,7 +81,7 @@ public class TipController {
 
     @GetMapping("/{id}")
     public ResponseEntity<CustomResponse<Tip>> selectTip(@PathVariable("id") Integer id) {
-        CustomResponse<Tip> res = new CustomResponse();
+        CustomResponse<Tip> res = new CustomResponse<>();
         try {
             Tip tip = tipService.selectTip(id);
             res.setData(Optional.ofNullable(tip));
@@ -108,16 +104,16 @@ public class TipController {
     public ResponseEntity<CustomResponse<Tip>> addTip(@RequestHeader(value = "Authorization") Optional<String> auth,
                                                       @RequestPart(value = "data") AddTipReq data,
                                                       @RequestPart(value = "image") MultipartFile image) {
-        CustomResponse<Tip> res = new CustomResponse();
+        CustomResponse<Tip> res = new CustomResponse<>();
         Optional<TokenInfo> tokenInfo = jwt.validateAndGetTokenInfo(Set.of(TokenAuthType.ADMIN), auth);
         if (tokenInfo == null) return res.throwError("인증이 필요합니다.", "FORBIDDEN");
         try {
             Tip tip = new Tip();
             String title = utils.validateString(data.title, 100L, "제목");
             String description = utils.validateString(data.description, 200L, "설명");
-            String imageUrl = s3.upload(image, new ArrayList<>(Arrays.asList("tip")));
+            String imageUrl = s3.upload(image, new ArrayList<>(List.of("tip")));
             if (data.content == null) return res.throwError("내용을 입력해주세요.", "INPUT_CHECK_REQUIRED");
-            String contentUrl = s3.uploadEditorStringToS3(data.content, new ArrayList<>(Arrays.asList("tip")));
+            String contentUrl = s3.uploadEditorStringToS3(data.content, new ArrayList<>(List.of("tip")));
             tip.setTitle(title);
             tip.setType(data.type == null ? TipType.COMPARE : data.type);
             tip.setDescription(description);
@@ -136,7 +132,7 @@ public class TipController {
                                                          @PathVariable("id") Integer id,
                                                          @RequestPart(value = "data") AddTipReq data,
                                                          @RequestPart(value = "image", required = false) MultipartFile image) {
-        CustomResponse<Tip> res = new CustomResponse();
+        CustomResponse<Tip> res = new CustomResponse<>();
         Optional<TokenInfo> tokenInfo = jwt.validateAndGetTokenInfo(Set.of(TokenAuthType.ADMIN), auth);
         if (tokenInfo == null) return res.throwError("인증이 필요합니다.", "FORBIDDEN");
         try {
@@ -154,11 +150,11 @@ public class TipController {
                 tip.setType(data.type);
             }
             if (image != null) {
-                String imageUrl = s3.upload(image, new ArrayList<>(Arrays.asList("tip")));
+                String imageUrl = s3.upload(image, new ArrayList<>(List.of("tip")));
                 tip.setImage(imageUrl);
             }
             if (data.content != null) {
-                String contentUrl = s3.uploadEditorStringToS3(data.content, new ArrayList<>(Arrays.asList("tip")));
+                String contentUrl = s3.uploadEditorStringToS3(data.content, new ArrayList<>(List.of("tip")));
                 tip.setContent(contentUrl);
             }
 
@@ -170,13 +166,14 @@ public class TipController {
     }
 
     @DeleteMapping("/{id}")
-    public ResponseEntity<CustomResponse> deleteTip(@RequestHeader(value = "Authorization") Optional<String> auth,
+    public ResponseEntity<CustomResponse<Boolean>> deleteTip(@RequestHeader(value = "Authorization") Optional<String> auth,
                                                     @PathVariable("id") Integer id) {
-        CustomResponse res = new CustomResponse();
+        CustomResponse<Boolean> res = new CustomResponse<>();
         Optional<TokenInfo> tokenInfo = jwt.validateAndGetTokenInfo(Set.of(TokenAuthType.ADMIN), auth);
         if (tokenInfo == null) return res.throwError("인증이 필요합니다.", "FORBIDDEN");
         try {
             tipService.delete(id);
+            res.setData(Optional.of(true));
             return ResponseEntity.ok(res);
         } catch (Exception e) {
             return res.defaultError(e);
